--- a/web/src/app/app.html
+++ b/web/src/app/app.html
@@ -1,1 +1,5 @@
-<app-currency-converter></app-currency-converter>
+<div class="container row">
+    <div class="col-6">
+        <app-currency-converter></app-currency-converter>
+    </div>
+</div>
