--- a/web/src/app/app.html
+++ b/web/src/app/app.html
@@ -1,5 +1,8 @@
-<div class="container row">
-    <div class="col-6">
+<div class="container mt-5">
+    <div class="w-lg">
         <app-currency-converter></app-currency-converter>
+        <div class="mt-3">
+            <app-conversions></app-conversions>
+        </div>
     </div>
 </div>
