--- a/web/src/app/components/currency-converter/currency-converter.html
+++ b/web/src/app/components/currency-converter/currency-converter.html
@@ -3,42 +3,45 @@
     <mat-card-title>Currency Converter</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <div class="row g-3">
-      <div class="col-12">
-        <mat-form-field appearance="fill" class="w-100">
-          <mat-label>Amount</mat-label>
-          <input matInput type="number" [(ngModel)]="amount" (ngModelChange)="result.set(0)" min="0">
-        </mat-form-field>
-      </div>
-      <div class="col-12 col-md-6">
-        <mat-form-field appearance="fill" class="w-100">
-          <mat-label>From</mat-label>
-          <mat-select [(ngModel)]="fromCurrency">
-            <mat-option *ngFor="let currency of currencies()" [value]="currency">
-              {{ currency }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div class="col-12 col-md-6">
-        <mat-form-field appearance="fill" class="w-100">
-          <mat-label>To</mat-label>
-          <mat-select [(ngModel)]="toCurrency">
-            <mat-option *ngFor="let currency of currencies()" [value]="currency">
-              {{ currency }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div class="col-12" *ngIf="result()">
-        <div class="alert alert-success">
-          {{ amount() }} {{ fromCurrency() }} = {{ result() | number:'1.2-2' }} {{ toCurrency() }}
+    <form [formGroup]="converterForm">
+      <div class="row g-3">
+        <div class="col-12">
+          <mat-form-field appearance="fill" class="w-100">
+            <mat-label>Amount</mat-label>
+            <input matInput type="number" formControlName="amount" min="0">
+          </mat-form-field>
+        </div>
+        <div class="col-12 col-md-6">
+          <mat-form-field appearance="fill" class="w-100">
+            <mat-label>From</mat-label>
+            <mat-select formControlName="fromCurrency">
+              <mat-option *ngFor="let currency of currencies" [value]="currency">
+                {{ currency }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="col-12 col-md-6">
+          <mat-form-field appearance="fill" class="w-100">
+            <mat-label>To</mat-label>
+            <mat-select formControlName="toCurrency">
+              <mat-option *ngFor="let currency of currencies" [value]="currency">
+                {{ currency }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="col-12" *ngIf="result">
+          <div class="alert alert-success">
+            {{ converterForm.get('amount')?.value }} {{ converterForm.get('fromCurrency')?.value }} = 
+            {{ result | number:'1.2-2' }} {{ converterForm.get('toCurrency')?.value }}
+          </div>
         </div>
       </div>
-    </div>
+    </form>
   </mat-card-content>
   <mat-card-actions align="end">
-    <button mat-raised-button color="primary" (click)="convert()" [disabled]="isLoading()">
+    <button mat-raised-button color="primary" (click)="convert()" [disabled]="isLoading">
       Convert
     </button>
   </mat-card-actions>
