fix: layout styling and responsiveness

--- a/web/src/app/app.html
+++ b/web/src/app/app.html
@@ -1,7 +1,9 @@
-<div class="container mt-5">
-    <div class="w-lg">
-        <app-currency-converter></app-currency-converter>
-        <div class="mt-3">
+<div class="container mt-3">
+    <div class="row">
+        <div class="col-lg-5 col-12 mt-3">
+            <app-currency-converter></app-currency-converter>
+        </div>
+        <div class="col-lg-7 col-12 mt-3">
             <app-conversions></app-conversions>
         </div>
     </div>
