--- a/web/src/app/components/conversions/conversions.html
+++ b/web/src/app/components/conversions/conversions.html
@@ -1,8 +1,8 @@
 <mat-card>
     <mat-card-header>
-        <mat-card-title>Currency Converter</mat-card-title>
+        <mat-card-title>Conversions</mat-card-title>
     </mat-card-header>
-    <mat-card-content>
+    <mat-card-content class="overflow-x-auto">
         <table mat-table [dataSource]="dataSource" class="mt-2">
             <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef>ID</th>
