--- a/web/src/app/components/currency-converter/currency-converter.html
+++ b/web/src/app/components/currency-converter/currency-converter.html
@@ -3,7 +3,7 @@
     <mat-card-title>Currency Converter</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <form [formGroup]="converterForm">
+    <form [formGroup]="converterForm" class="mt-2">
       <div class="row g-3">
         <div class="col-12">
           <mat-form-field appearance="fill" class="w-100">
@@ -41,8 +41,8 @@
     </form>
   </mat-card-content>
   <mat-card-actions align="end">
-    <button mat-raised-button color="primary" (click)="convert()" [disabled]="isLoading">
-      Convert
+    <button mat-raised-button matButton="filled" color="primary" (click)="convert()" [disabled]="isLoading">
+      Convert to {{ converterForm.get('toCurrency')?.value }}
     </button>
   </mat-card-actions>
 </mat-card>
