feat: add navbar for better styling

--- a/web/src/app/app.html
+++ b/web/src/app/app.html
@@ -1,4 +1,11 @@
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid justify-content-center">
+        <a class="navbar-brand block text-uppercase">Currency converter app</a>
+    </div>
+</nav>
+
 <div class="container mt-3">
+
     <div class="row">
         <div class="col-lg-5 col-12 mt-3">
             <app-currency-converter></app-currency-converter>
