fix: conver button allignment

--- a/web/src/app/components/currency-converter/currency-converter.html
+++ b/web/src/app/components/currency-converter/currency-converter.html
@@ -40,7 +40,7 @@
       </div>
     </form>
   </mat-card-content>
-  <mat-card-actions align="end">
+  <mat-card-actions>
     <button mat-raised-button matButton="filled" color="primary" (click)="convert()" [disabled]="isLoading">
       Convert to {{ converterForm.get('toCurrency')?.value }}
     </button>
