add the scrolling for the conversions

--- a/web/src/app/app.html
+++ b/web/src/app/app.html
@@ -10,7 +10,7 @@
         <div class="col-lg-5 col-12 mt-3">
             <app-currency-converter></app-currency-converter>
         </div>
-        <div class="col-lg-7 col-12 mt-3">
+        <div id="conversions" class="col-lg-7 col-12 mt-3">
             <app-conversions></app-conversions>
         </div>
     </div>
